--- a/themes/bootstrap3/templates/myresearch/menu.phtml
+++ b/themes/bootstrap3/templates/myresearch/menu.phtml
@@ -1,79 +1,6 @@
 <?php
   $user = $this->auth()->isLoggedIn();
-  $menuItemsConfig = $this->config()->get('AccountMenu')?->MenuItems?->toArray() ?? [];
-  $menuItemsDefault = [
-    'favorites' => [
-      'label' => 'Favorites',
-      'route' => 'myresearch-favorites',
-      'icon' => 'user-favorites',
-    ],
-    'checkedout' => [
-      'label' => 'Checked Out Items',
-      'route' => 'myresearch-checkedout',
-      'ilsCapability' => 'getMyTransactions',
-      'icon' => 'user-checked-out',
-      'status' => true,
-    ],
-    'historicloans' => [
-      'label' => 'Loan History',
-      'route' => 'checkouts-history',
-      'ilsFunction' => 'getMyTransactionHistory',
-      'icon' => 'user-loan-history',
-    ],
-    'holds' => [
-      'label' => 'Holds and Recalls',
-      'route' => 'holds-list',
-      'ilsCapability' => 'getMyHolds',
-      'icon' => 'user-holds',
-      'status' => true,
-    ],
-    'storageRetrievalRequests' => [
-      'label' => 'Storage Retrieval Requests',
-      'route' => 'myresearch-storageretrievalrequests',
-      'ilsFunction' => 'StorageRetrievalRequests',
-      'icon' => 'user-storage-retrievals',
-      'status' => true,
-    ],
-    'ILLRequests' => [
-      'label' => 'Interlibrary Loan Requests',
-      'route' => 'myresearch-illrequests',
-      'ilsFunction' => 'ILLRequests',
-      'icon' => 'user-ill-requests',
-      'status' => true,
-    ],
-    'fines' => [
-      'label' => 'Fines',
-      'route' => 'myresearch-fines',
-      'ilsCapability' => 'getMyFines',
-      'status' => true,
-    ],
-    'profile' => [
-      'label' => 'Profile',
-      'route' => 'myresearch-profile',
-      'icon' => 'profile',
-    ],
-    'librarycards' => [
-      'label' => 'Library Cards',
-      'route' => 'librarycards-home',
-      'icon' => 'barcode',
-    ],
-    'dgcontent' => [
-      'label' => 'Overdrive Content',
-      'route' => 'overdrive-mycontent',
-      'icon' => 'overdrive',
-    ],
-    'history' => [
-      'label' => 'Search History',
-      'route' => 'search-history',
-      'icon' => 'search',
-    ],
-    'logout' => [
-      'label' => 'Log Out',
-      'route' => 'myresearch-logout',
-      'icon' => 'sign-out',
-    ],
-  ];
-  $menuItems = !empty($menuItemsConfig) ? $menuItemsConfig : $menuItemsDefault;
+  $menuItems = $this->accountMenu()->getItems();
 ?>
 
 <button class="close-offcanvas btn btn-link" data-toggle="offcanvas"><?=$this->transEsc('navigate_back') ?></button>
