css: remove btn class

--- a/themes/bootstrap3/templates/_ui/components/menu-button.phtml
+++ b/themes/bootstrap3/templates/_ui/components/menu-button.phtml
@@ -9,7 +9,7 @@
   $toggleTag = 'button';
   $defaultAttrs = [
     'type' => 'button', // Accessible default
-    'class' => 'dropdown-toggle btn', // Bootstrap class
+    'class' => 'dropdown-toggle', // Bootstrap class
     'data-toggle' => 'dropdown', // Bootstrap data-attr
     'aria-expanded' => 'false',
     'aria-haspopup' => 'true',
