Add and use render method

--- a/themes/bootstrap3/templates/header.phtml
+++ b/themes/bootstrap3/templates/header.phtml
@@ -43,7 +43,7 @@
                 <li id="login-dropdown" class="dropdown hidden-xs">
                   <a href="#" data-toggle="dropdown"><?=$this->icon('dropdown-caret') ?></a>
                   <div class="dropdown-menu">
-                    <?=$this->render('myresearch/menu'); ?>
+                    <?=$this->accountMenu()->render('')?>
                   </div>
                 </li>
               <?php endif; ?>
