--- a/themes/bootstrap3/templates/myresearch/edit.phtml
+++ b/themes/bootstrap3/templates/myresearch/edit.phtml
@@ -71,5 +71,5 @@
   </form>
 </div>
 <div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar" role="navigation" aria-label="<?=$this->transEsc('account_menu_label')?>">
-  <?=$this->context($this)->renderInContext('myresearch/menu.phtml', ['active' => empty($listID) ? 'favorites' : 'list' . $listID])?>
+  <?=$this->accountMenu()->render(empty($listID) ? 'favorites' : 'list' . $listID)?>
 </div>
