--- a/themes/bootstrap3/templates/search/history.phtml
+++ b/themes/bootstrap3/templates/search/history.phtml
@@ -63,7 +63,7 @@
 
 <?php if ($saveSupported): ?>
   <div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar" role="navigation" aria-label="<?=$this->transEsc('account_menu_label')?>">
-    <?=$this->context($this)->renderInContext('myresearch/menu.phtml', ['active' => 'history'])?>
+    <?=$this->accountMenu()->render('history')?>
   </div>
 <?php endif; ?>
 
