--- a/themes/bootstrap3/templates/search/results.phtml
+++ b/themes/bootstrap3/templates/search/results.phtml
@@ -26,6 +26,15 @@
   // Set up breadcrumbs:
   $this->layout()->breadcrumbs .= '<li class="active">' . $this->escapeHtml($headTitle) . '</li>';
 
+  // Set up search controls (avoiding unnecessary rendering):
+  if (!$this->slot('search-controls')->isset()) {
+      $this->slot('search-controls')->set(
+          $this->render('search/controls/limit.phtml')
+          . ' ' . $this->render('search/controls/sort.phtml')
+          . ' ' . $this->render('search/controls/view.phtml')
+      );
+  }
+
   // Store search id:
   $this->layout()->searchId = $this->results->getSearchId();
 
@@ -68,9 +77,7 @@
 
     <?php if ($recordTotal > 0): ?>
       <div class="search-controls">
-        <?=$this->render('search/controls/limit.phtml')?>
-        <?=$this->render('search/controls/sort.phtml')?>
-        <?=$this->render('search/controls/view.phtml')?>
+        <?=$this->slot('search-controls')?>
       </div>
     <?php endif; ?>
   </div>
