--- a/themes/bootstrap3/templates/search/results.phtml
+++ b/themes/bootstrap3/templates/search/results.phtml
@@ -119,9 +119,11 @@
 <?php /* End Main Listing */ ?>
 
 <?php /* Refine Search Options */ ?>
-<div class="<?=$this->layoutClass('sidebar')?>" id="search-sidebar">
-  <?php foreach ($this->results->getRecommendations('side') as $index => $current): ?>
-    <?=$this->recommend($current, 'side', $index)?>
-  <?php endforeach; ?>
-</div>
+<?php if ($recommendations = $this->results->getRecommendations('side')): ?>
+  <div class="<?=$this->layoutClass('sidebar')?>" id="search-sidebar">
+    <?php foreach ($recommendations as $index => $current): ?>
+      <?=$this->recommend($current, 'side', $index)?>
+    <?php endforeach; ?>
+  </div>
+<?php endif; ?>
 <?php /* End Refine Search Options */ ?>
