--- a/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
+++ b/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
@@ -9,18 +9,6 @@
   $multiPageSelection = $socialConfig['multi_page_favorites_selection'] ?? false;
   $checkboxSelectAllType = $socialConfig['checkbox_select_all_favorites_type'] ?? 'none';
   ?>
-  <?php if(in_array($checkboxSelectAllType, ['on_page', 'both'])): ?>
-    <div class="bulk-checkbox">
-      <input type="checkbox" name="selectAll" class="checkbox-select-all" id="myresearchCheckAll">
-      <label for="myresearchCheckAll"><?=$this->transEsc('select_all_on_page')?></label>
-    </div>
-  <?php endif; ?>
-  <?php if($multiPageSelection && in_array($checkboxSelectAllType, ['global', 'both'])): ?>
-    <div class="bulk-checkbox select-all-global hidden">
-      <input type="checkbox" name="selectAllGlobal" class="checkbox-select-all-global" id="myresearchCheckAllGlobal">
-      <label for="myresearchCheckAllGlobal"><?=$this->transEsc('select_all')?></label>
-    </div>
-  <?php endif; ?>
   <ul class="action-toolbar">
     <?=
       $this->bulkAction()->button(
@@ -80,6 +68,29 @@
             ]
         )
       ?>
+    <?php endif; ?>
+  </ul>
+  <ul class="selection-controls-bar">
+    <?php if(in_array($checkboxSelectAllType, ['on_page', 'both'])): ?>
+      <li class="bulk-checkbox">
+        <input type="checkbox" name="selectAll" class="checkbox-select-all" id="myresearchCheckAll">
+        <label for="myresearchCheckAll"><?=$this->transEsc('select_all_on_page')?></label>
+      </li>
+    <?php endif; ?>
+    <?php if($multiPageSelection && in_array($checkboxSelectAllType, ['global', 'both'])): ?>
+      <li class="bulk-checkbox">
+        <div class="select-all-global hidden">
+          <input type="checkbox" name="selectAllGlobal" class="checkbox-select-all-global" id="myresearchCheckAllGlobal">
+          <label for="myresearchCheckAllGlobal"><?=$this->transEsc('select_all')?></label>
+        </div>
+      </li>
+    <?php endif; ?>
+    <?php if($multiPageSelection): ?>
+      <li>
+        <button type="button" class="btn clear-selection hidden">
+          <?=$this->transEsc('clear_selection')?> (<span class="select-count"></span>)
+        </button>
+      </li>
     <?php endif; ?>
   </ul>
 </nav>
