translate clear_selection in js

--- a/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
+++ b/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
@@ -87,9 +87,7 @@
     <?php endif; ?>
     <?php if($multiPageSelection): ?>
       <li>
-        <button type="button" class="btn clear-selection hidden">
-          <?=$this->transEsc('clear_selection')?> (<span class="select-count"></span>)
-        </button>
+        <button type="button" class="btn clear-selection hidden"></button>
       </li>
     <?php endif; ?>
   </ul>
