--- a/themes/bootstrap3/templates/layout/js-translations.phtml
+++ b/themes/bootstrap3/templates/layout/js-translations.phtml
@@ -8,6 +8,7 @@ $this->jsTranslations()->addStrings(
       'bulk_limit_exceeded' => 'bulk_limit_exceeded',
       'bulk_noitems_advice' => 'bulk_noitems_advice',
       'bulk_save_success' => 'bulk_save_success',
+      'clear_selection' => 'clear_selection',
       'close' => 'close',
       'collection_empty' => 'collection_empty',
       'del_search_num' => 'del_search_num',
