--- a/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
+++ b/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
@@ -87,7 +87,7 @@
     <?php endif; ?>
     <?php if($multiPageSelection): ?>
       <li>
-        <button type="button" class="btn clear-selection hidden"></button>
+        <button type="button" class="clear-selection hidden"></button>
       </li>
     <?php endif; ?>
   </ul>
