--- a/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
+++ b/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
@@ -6,8 +6,8 @@
 <nav class="bulkActionButtons">
   <?php
   $socialConfig = $this->config()->get('config')['Social'];
-  $multiPageSelection = $socialConfig['multi_page_favorites_selection'] ?? false;
-  $checkboxSelectAllType = $socialConfig['checkbox_select_all_favorites_type'] ?? 'none';
+  $multiPageSelection = $socialConfig['multi_page_favorites_selection'] ?? true;
+  $checkboxSelectAllType = $socialConfig['checkbox_select_all_favorites_type'] ?? 'both';
   ?>
   <ul class="action-toolbar">
     <?=
