Add support for Primo citations search. (#3393)

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -301,6 +301,10 @@ header .container.navbar { margin-bottom: 0; }
   display: none;
 }
 
+.result-citation-links {
+  margin: 0.5rem 0;
+}
+
 @media (min-width: 768px) {
   .result-body {
     float: left;
