--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -84,7 +84,7 @@
     <?php endif; ?>
   </div>
 
-  <?php $user = $this->auth()->isLoggedIn(); ?>
+  <?php $user = $this->auth()->getUserObject(); ?>
   <?php if ($this->auth()->getManager()->supportsPersistentLogin($user->auth_method)): ?>
     <h3><?=$this->transEsc('Saved Logins')?></h3>
     <?php $tokens = $user->getLoginTokens($user->id); ?>
