--- a/themes/bootstrap3/templates/RecordTab/holdingsils.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils.phtml
@@ -43,7 +43,22 @@
       </div>
     <?php elseif (!$user->cat_username): ?>
       <div class="alert alert-info">
-        <?=str_replace('<a ', '<a data-lightbox ', $this->translate('hold_profile_html', ['%%url%%' => $this->escapeHtmlAttr($this->recordLinker()->getTabUrl($this->driver, 'Holdings', ['catalogLogin' => 'true']))]))?>
+        <?php
+          // Add a data-lightbox attribute to the link in the translation; we do this here to keep
+          // the HTML in the language files as simple/generic/future-proof as possible.
+          echo str_replace(
+              '<a ',
+              '<a data-lightbox ',
+              $this->translate(
+                'hold_profile_html',
+                [
+                '%%url%%' => $this->escapeHtmlAttr(
+                    $this->recordLinker()->getTabUrl($this->driver, 'Holdings', ['catalogLogin' => 'true'])
+                ),
+              ]
+            )
+          )
+        ?>
       </div>
     <?php endif; ?>
   <?php endif; ?>
