--- a/themes/bootstrap3/templates/RecordTab/holdingsils.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils.phtml
@@ -46,18 +46,10 @@
         <?php
           // Add a data-lightbox attribute to the link in the translation; we do this here to keep
           // the HTML in the language files as simple/generic/future-proof as possible.
-          echo str_replace(
-              '<a ',
-              '<a data-lightbox ',
-              $this->translate(
-                'hold_profile_html',
-                [
-                '%%url%%' => $this->escapeHtmlAttr(
-                    $this->recordLinker()->getTabUrl($this->driver, 'Holdings', ['catalogLogin' => 'true'])
-                ),
-              ]
-            )
-          )
+          $catalogLoginUrl = $this->recordLinker()
+            ->getTabUrl($this->driver, 'Holdings', ['catalogLogin' => 'true']);
+          $tokens = ['%%url%%' => $this->escapeHtmlAttr($catalogLoginUrl)];
+          echo str_replace('<a ', '<a data-lightbox ', $this->translate('hold_profile_html', $tokens));
         ?>
       </div>
     <?php endif; ?>
