Hide bottom border.

--- a/themes/sandal/less/search.less
+++ b/themes/sandal/less/search.less
@@ -237,6 +237,7 @@
   .nav-tabs {
     white-space: nowrap;
     margin-bottom: 1rem;
+    border-bottom: none;
   }
   .nav-tabs a,
   .nav-tabs a:hover {
