--- a/themes/sandal/scss/search.scss
+++ b/themes/sandal/scss/search.scss
@@ -237,6 +237,7 @@
   .nav-tabs {
     white-space: nowrap;
     margin-bottom: 1rem;
+    border-bottom: none;
   }
   .nav-tabs a,
   .nav-tabs a:hover {
