--- a/themes/sandal/scss/variables.scss
+++ b/themes/sandal/scss/variables.scss
@@ -8,10 +8,10 @@ $result-checkbox-width: 28px;
 $result-checkbox-height: 80px;
 $result-sm-icon-size: 1.5rem;
 
-$font-size-base: 16px;
+$font-size-base: 1rem; // Assumes the browser default, typically `16px`
 
-$reduced-font-size: ($font-size-base - 2);
-$min-font-size: ($font-size-base - 6);
+$reduced-font-size: ($font-size-base - 0.1);
+$min-font-size: ($font-size-base - 0.38);
 
 // Increase base line height to accommodate 16px font (affect at least Chrome on Windows):
 $line-height-base: 1.5;
