--- a/themes/sandal/scss/colors.scss
+++ b/themes/sandal/scss/colors.scss
@@ -48,3 +48,4 @@ $dropdown-link-hover-color: $black;
 $list-group-active-bg:      $brand-secondary;
 $table-bg-hover:            $header-light;
 $pagination-color:          $header-bg;
+$pagination-hover-bg:       #eee;
