--- a/themes/sandal/scss/variables.scss
+++ b/themes/sandal/scss/variables.scss
@@ -16,6 +16,8 @@ $min-font-size: ($font-size-base - 0.38);
 // Increase base line height to accommodate 16px font (affect at least Chrome on Windows):
 $line-height-base: 1.5;
 
+$pagination-border-width: 0;
+
 /* ------ Mixins ------ */
 @mixin full-width(){ // Break out of the container
   margin-right: calc(50% - 50vw + .5rem); // .5rem seems to be the margin of error in Chrome
