Fix sandal search tabs hover color in search results etc.

--- a/themes/sandal/less/sandal.less
+++ b/themes/sandal/less/sandal.less
@@ -71,7 +71,7 @@ header {
     background-color: @header-light;
     border-color: @black;
   }
-  .nav > li > a,
+  .nav.navbar-nav > li > a,
   .nav.navbar-nav button.dropdown-toggle {
     &:hover,
     &:focus {
