--- a/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/core.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/core.phtml
@@ -49,7 +49,7 @@ if ($availCode == 'od_code_login_for_avail') {
     } else {
         $checkedOut = $checkedOutResult->data;
         if (!$checkedOut) {
-            $hold = $this->driver->isHeld($user);
+            $hold = $this->driver->isHeld();
         }
 
         //this title is checked out
