--- a/themes/bootstrap3/templates/myresearch/schedulesearch.phtml
+++ b/themes/bootstrap3/templates/myresearch/schedulesearch.phtml
@@ -14,7 +14,7 @@
 </a>
 
 <div class="<?=$this->layoutClass('mainbody')?>">
-  <?php if (!empty($user->email)): ?>
+  <?php if ($user && !empty($user->email)): ?>
     <div class="alert alert-info alert-email-notification">
       <?=$this->transEsc('alert_email_address') . ': ' . $this->escapeHtml($user->email) ?>
       <?php if ($this->auth()->getManager()->supportsEmailChange()): ?>
