--- a/themes/bootstrap3/templates/myresearch/edit.phtml
+++ b/themes/bootstrap3/templates/myresearch/edit.phtml
@@ -12,7 +12,7 @@
 ?>
 <div class="<?=$this->layoutClass('mainbody')?>">
   <a class="search-filter-toggle visible-xs" href="#myresearch-sidebar"
-    data-toggle="offcanvas" aria-label="<?=$this->transEsc('sidebar_expand')?>">
+    data-toggle="vufind-offcanvas" aria-label="<?=$this->transEsc('sidebar_expand')?>">
     <?=$this->transEsc('Your Account') ?>
   </a>
 
