--- a/themes/sandal/less/sandal.less
+++ b/themes/sandal/less/sandal.less
@@ -240,7 +240,8 @@ a:hover .login-dropdown-caret {
 
   .more-btn, .less-btn {
     border: 0;
-    padding: 0;
+    border-bottom: 1px solid #ddd;
+    border-radius: 0;
   }
 }
 
