--- a/themes/sandal/less/sandal.less
+++ b/themes/sandal/less/sandal.less
@@ -240,7 +240,7 @@ a:hover .login-dropdown-caret {
 
   .more-btn, .less-btn {
     border: 0;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid @list-group-border;
     border-radius: 0;
   }
 }
