Sandal theme: Fix style on facet more/less button. (#3487)

--- a/themes/sandal/scss/sandal.scss
+++ b/themes/sandal/scss/sandal.scss
@@ -240,7 +240,8 @@ a:hover .login-dropdown-caret {
 
   .more-btn, .less-btn {
     border: 0;
-    padding: 0;
+    border-bottom: 1px solid $list-group-border;
+    border-radius: 0;
   }
 }
 
